Makes new Login page resize correctly on mobile

--- a/ui/src/app/modules/boards/pages/login/login.page.scss
+++ b/ui/src/app/modules/boards/pages/login/login.page.scss
@@ -20,13 +20,17 @@
   background-color: #fafafa;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   flex-direction: row;
   overflow: auto;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 
   font-family: 'Open Sans', sans-serif;
+
+  @media only screen and (max-width: 900px) {
+    flex-direction: column;
+  }
 
   re-captcha {
     visibility: hidden;
@@ -182,7 +186,6 @@
 
   .contributors {
     flex: 1;
-    height: 100%;
     box-sizing: border-box;
     padding: 2rem 5rem;
     background-color: $midnight-blue;
